--- a/Views/PersonalTrainers/WorkoutSchedule.cshtml
+++ b/Views/PersonalTrainers/WorkoutSchedule.cshtml
@@ -1,17 +1,17 @@
 ﻿@model Core_Health_and_Fitness.Models.WorkoutSchedule
 
 @{
-    ViewData["Title"] = "CreateWorkoutSchedule";
+    ViewData["Title"] = "WorkoutSchedule";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>CreateWorkoutSchedule</h1>
+<h1>WorkoutSchedule</h1>
 
 <h4>WorkoutSchedule</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="CreateWorkoutSchedule">
+        <form asp-action="WorkoutSchedule">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Monday" class="control-label"></label>
