--- a/Views/Client/Index.cshtml
+++ b/Views/Client/Index.cshtml
@@ -1,11 +1,11 @@
 ﻿@model IEnumerable<Core_Health_and_Fitness.Models.PersonalTrainer>
 
 @{
-    ViewData["Title"] = "ListOfPersonalTrainers";
+    ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>ListOfPersonalTrainers</h1>
+<h1>Index</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
