--- a/Views/PersonalTrainers/DietPlan.cshtml
+++ b/Views/PersonalTrainers/DietPlan.cshtml
@@ -1,17 +1,17 @@
 ﻿@model Core_Health_and_Fitness.Models.DietPlan
 
 @{
-    ViewData["Title"] = "CreateDietPlan";
+    ViewData["Title"] = "DietPlan";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>CreateDietPlan</h1>
+<h1>DietPlan</h1>
 
 <h4>DietPlan</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="CreateDietPlan">
+        <form asp-action="DietPlan">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="CaloricIntake" class="control-label"></label>
