Had to re-do both controllers and views for Clients.

--- a/Views/Clients/PersonalTrainers.cshtml
+++ b/Views/Clients/PersonalTrainers.cshtml
@@ -1,11 +1,11 @@
 ﻿@model IEnumerable<Core_Health_and_Fitness.Models.PersonalTrainer>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "PersonalTrainers";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
+<h1>PersonalTrainers</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -74,9 +74,7 @@
                 @Html.DisplayFor(modelItem => item.Client.ClientId)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.PersonalTrainerId">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.PersonalTrainerId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.PersonalTrainerId">Delete</a>
             </td>
         </tr>
 }
