--- a/Views/PersonalTrainers/DietPlan.cshtml
+++ b/Views/PersonalTrainers/DietPlan.cshtml
@@ -33,11 +33,11 @@
                 <input asp-for="Fat" class="form-control" />
                 <span asp-validation-for="Fat" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div hidden class="form-group">
                 <label asp-for="IdentityUserId" class="control-label"></label>
                 <select asp-for="IdentityUserId" class ="form-control" asp-items="ViewBag.IdentityUserId"></select>
             </div>
-            <div class="form-group">
+            <div hidden class="form-group">
                 <label asp-for="ClientId" class="control-label"></label>
                 <select asp-for="ClientId" class ="form-control" asp-items="ViewBag.ClientId"></select>
             </div>
