--- a/Views/PersonalTrainers/CreateWorkoutSchedule.cshtml
+++ b/Views/PersonalTrainers/CreateWorkoutSchedule.cshtml
@@ -1,17 +1,17 @@
 ﻿@model Core_Health_and_Fitness.Models.WorkoutSchedule
 
 @{
-    ViewData["Title"] = "WorkoutSchedule";
+    ViewData["Title"] = "CreateWorkoutSchedule";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>WorkoutSchedule</h1>
+<h1>CreateWorkoutSchedule</h1>
 
 <h4>WorkoutSchedule</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="WorkoutSchedule">
+        <form asp-action="CreateWorkoutSchedule">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Monday" class="control-label"></label>
@@ -52,7 +52,7 @@
                 <label asp-for="IdentityUserId" class="control-label"></label>
                 <select asp-for="IdentityUserId" class ="form-control" asp-items="ViewBag.IdentityUserId"></select>
             </div>
-            <div hidden class="form-group">
+            <div hdden class="form-group">
                 <label asp-for="ClientId" class="control-label"></label>
                 <select asp-for="ClientId" class ="form-control" asp-items="ViewBag.ClientId"></select>
             </div>
