--- a/Views/Clients/ClientProfile.cshtml
+++ b/Views/Clients/ClientProfile.cshtml
@@ -43,11 +43,11 @@
                 <input asp-for="FitnessGoal" class="form-control" />
                 <span asp-validation-for="FitnessGoal" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div hidden class="form-group">
                 <label asp-for="ClientId" class="control-label"></label>
                 <select asp-for="ClientId" class ="form-control" asp-items="ViewBag.ClientId"></select>
             </div>
-            <div class="form-group">
+            <div hidden class="form-group">
                 <label asp-for="IdentityUserId" class="control-label"></label>
                 <select asp-for="IdentityUserId" class ="form-control" asp-items="ViewBag.IdentityUserId"></select>
             </div>
