--- a/Views/Clients/Index.cshtml
+++ b/Views/Clients/Index.cshtml
@@ -64,7 +64,11 @@
             <td>
                 <a asp-action="Edit" asp-route-id="@item.ClientId">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.ClientId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ClientId">Delete</a>
+                <a asp-action="Delete" asp-route-id="@item.ClientId">Delete</a> |
+                <a asp-action="PersonalTraners" asp-route-id="@item.ClientId">Personal Trainers List</a> |
+                <a asp-action="WorkoutSchedule" asp-route-id="@item.ClientId">Workout Schedule</a> |
+                <a asp-action="ClientProfile" asp-route-id="@item.ClientId">Create Client Profile</a>
+                <a asp-action="Map" asp-route-id="@item.ClientId">Personal Trainer Location</a> |
             </td>
         </tr>
 }
