--- a/Views/PersonalTrainers/Index.cshtml
+++ b/Views/PersonalTrainers/Index.cshtml
@@ -77,6 +77,10 @@
                 <a asp-action="Edit" asp-route-id="@item.PersonalTrainerId">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.PersonalTrainerId">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.PersonalTrainerId">Delete</a>
+                <a asp-action="CreateWorkoutSchedule" asp-route-id="@item.PersonalTrainerId">Create Workout Schedule</a> |
+                <a asp-action="EditWorkoutSchedule" asp-route-id="@item.PersonalTrainerId">Edit Workout Schedule</a> |
+                <a asp-action="CreateDietPlan" asp-route-id="@item.PersonalTrainerId">Create Diet Plan</a> |
+                <a asp-action="ViewClientProfile" asp-route-id="@item.PersonalTrainerId">View Client Profile</a>
             </td>
         </tr>
 }
