Re-added and re-updated migration, deleted Foreign key of Client from other models.

--- a/Views/Clients/Index.cshtml
+++ b/Views/Clients/Index.cshtml
@@ -67,8 +67,8 @@
                 <a asp-action="Delete" asp-route-id="@item.ClientId">Delete</a> |
                 <a asp-action="PersonalTraners" asp-route-id="@item.ClientId">Personal Trainers List</a> |
                 <a asp-action="WorkoutSchedule" asp-route-id="@item.ClientId">Workout Schedule</a> |
-                <a asp-action="ClientProfile" asp-route-id="@item.ClientId">Create Client Profile</a>
-                <a asp-action="Map" asp-route-id="@item.ClientId">Personal Trainer Location</a> |
+                <a asp-action="ClientProfile" asp-route-id="@item.ClientId">Create Client Profile</a> |
+                <a asp-action="Map" asp-route-id="@item.ClientId">Personal Trainer Location</a>
             </td>
         </tr>
 }
