--- a/Views/Clients/Map.cshtml
+++ b/Views/Clients/Map.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Core_Health_and_Fitness.Models.PersonalTrainer
 
 @{ ViewData["Title"] = "Map";
-                Layout = "~/Views/Shared/_Layout.cshtml"; }
+    Layout = "~/Views/Shared/_Layout.cshtml"; }
 
 <h1 class="text-primary">Map View</h1>
 <div>
@@ -44,7 +44,7 @@
 @section scripts{
 
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY_HERE&callback=initMap&libraries=&v=weekly"
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCcbQClo7NS9uH8VIQ7lMwc_FuUX2nVagg&callback=initMap&libraries=&v=weekly"
             defer></script>
     <script type="text/javascript">
     let map;
@@ -70,3 +70,4 @@
     }
     </script>
 }
+
