--- a/Views/PersonalTrainers/Index.cshtml
+++ b/Views/PersonalTrainers/Index.cshtml
@@ -37,9 +37,6 @@
             <th>
                 @Html.DisplayNameFor(model => model.IdentityUser)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Client)
-            </th>
             <th></th>
         </tr>
     </thead>
@@ -71,12 +68,9 @@
                 @Html.DisplayFor(modelItem => item.IdentityUser.Id)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Client.ClientId)
-            </td>
-            <td>
                 <a asp-action="Edit" asp-route-id="@item.PersonalTrainerId">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.PersonalTrainerId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.PersonalTrainerId">Delete</a>
+                <a asp-action="Delete" asp-route-id="@item.PersonalTrainerId">Delete</a> |
                 <a asp-action="CreateWorkoutSchedule" asp-route-id="@item.PersonalTrainerId">Create Workout Schedule</a> |
                 <a asp-action="EditWorkoutSchedule" asp-route-id="@item.PersonalTrainerId">Edit Workout Schedule</a> |
                 <a asp-action="CreateDietPlan" asp-route-id="@item.PersonalTrainerId">Create Diet Plan</a> |
