--- a/Views/Clients/ViewPersonalTrainers.cshtml
+++ b/Views/Clients/ViewPersonalTrainers.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<Core_Health_and_Fitness.Models.PersonalTrainer>
 
 @{
-    ViewData["Title"] = "PersonalTrainers";
+    ViewData["Title"] = "ViewPersonalTrainers";
 }
 
 <h1>Personal Trainers List</h1>
@@ -32,6 +32,6 @@
 
                 </td>
             </tr>
-}
+        }
     </tbody>
 </table>
