--- a/Views/Clients/ViewWorkoutSchedule.cshtml
+++ b/Views/Clients/ViewWorkoutSchedule.cshtml
@@ -1,11 +1,11 @@
 ﻿@model Core_Health_and_Fitness.Models.WorkoutSchedule
 
 @{
-    ViewData["Title"] = "WorkoutSchedule";
+    ViewData["Title"] = "ViewWorkoutSchedule";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>WorkoutSchedule</h1>
+<h1>ViewWorkoutSchedule</h1>
 
 <div>
     <h4>WorkoutSchedule</h4>
