--- a/Views/Clients/Index.cshtml
+++ b/Views/Clients/Index.cshtml
@@ -65,10 +65,11 @@
                 <a asp-action="Edit" asp-route-id="@item.ClientId">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.ClientId">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.ClientId">Delete</a> |
-                <a asp-action="PersonalTraners" asp-route-id="@item.ClientId">Personal Trainers List</a> |
-                <a asp-action="WorkoutSchedule" asp-route-id="@item.ClientId">Workout Schedule</a> |
-                <a asp-action="ClientProfile" asp-route-id="@item.ClientId">Create Client Profile</a> |
-                <a asp-action="Map" asp-route-id="@item.ClientId">Personal Trainer Location</a>
+                <a asp-action="ViewPersonalTrainers" asp-route-id="@item.ClientId">Personal Trainers List</a> |
+                <a asp-action="ViewWorkoutSchedule" asp-route-id="@item.ClientId">Workout Schedule</a> |
+                <a asp-action="CreateClientProfile" asp-route-id="@item.ClientId">Create Client Profile</a> |
+                <a asp-action="Map" asp-route-id="@item.ClientId">Personal Trainer Location</a> |
+                <a asp-action="ViewDietPlan" asp-route-id="@item.ClientId">View Diet Plan</a>
             </td>
         </tr>
 }
