Changed the name in the views folder for ViewPersonalTrainers to PersonalTrainersList.

--- a/Views/Clients/ViewPersonalTrainers.cshtml
+++ b/Views/Clients/ViewPersonalTrainers.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<Core_Health_and_Fitness.Models.PersonalTrainer>
 
 @{
-    ViewData["Title"] = "ViewPersonalTrainers";
+    ViewData["Title"] = "PersonalTrainersList";
 }
 
 <h1>Personal Trainers List</h1>
