Changed the LINQ queries for the views in both PersonalTrainersController and ClientsController for them to be routed to the proper views.

--- a/Views/Clients/Index.cshtml
+++ b/Views/Clients/Index.cshtml
@@ -65,7 +65,7 @@
                 <a asp-action="Edit" asp-route-id="@item.ClientId">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.ClientId">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.ClientId">Delete</a> |
-                <a asp-action="ViewPersonalTrainers" asp-route-id="@item.ClientId">Personal Trainers List</a> |
+                <a asp-action="PersonalTrainersList" asp-route-id="@item.ClientId">Personal Trainers List</a> |
                 <a asp-action="ViewWorkoutSchedule" asp-route-id="@item.ClientId">Workout Schedule</a> |
                 <a asp-action="CreateClientProfile" asp-route-id="@item.ClientId">Create Client Profile</a> |
                 <a asp-action="Map" asp-route-id="@item.ClientId">Personal Trainer Location</a> |
