--- a/Views/Clients/PersonalTrainersList.cshtml
+++ b/Views/Clients/PersonalTrainersList.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "PersonalTrainersList";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h1>Personal Trainers List</h1>
@@ -35,3 +36,4 @@
         }
     </tbody>
 </table>
+
