--- a/Views/Clients/Map.cshtml
+++ b/Views/Clients/Map.cshtml
@@ -1,12 +1,28 @@
 ﻿@model Core_Health_and_Fitness.Models.PersonalTrainer
 
-@{ ViewData["Title"] = "Map";
-    Layout = "~/Views/Shared/_Layout.cshtml"; }
+@{
+    ViewData["Title"] = "Map";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
 
-<h1 class="text-primary">Map View</h1>
+<h1>Map</h1>
+
 <div>
+    <h4>PersonalTrainer</h4>
     <hr />
     <dl class="row">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.FirstName)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.FirstName)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.LastName)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.LastName)
+        </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.AddressLine)
         </dt>
@@ -25,6 +41,18 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.ZipCode)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Lat)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Lat)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Long)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Long)
+        </dd>
     </dl>
 </div>
 <br />
@@ -39,6 +67,7 @@
     <br />
 </div>
 <br />
+
 <div id="map" style="width:100%; height:400px"></div>
 
 @section scripts{
@@ -70,4 +99,3 @@
     }
     </script>
 }
-
