--- a/Views/PersonalTrainers/Details.cshtml
+++ b/Views/PersonalTrainers/Details.cshtml
@@ -42,6 +42,12 @@
             @Html.DisplayFor(model => model.ZipCode)
         </dd>
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.MedicalProviders)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.MedicalProviders)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Lat)
         </dt>
         <dd class = "col-sm-10">
