--- a/Views/PersonalTrainers/Edit.cshtml
+++ b/Views/PersonalTrainers/Edit.cshtml
@@ -39,12 +39,17 @@
                 <input asp-for="ZipCode" class="form-control" />
                 <span asp-validation-for="ZipCode" class="text-danger"></span>
             </div>
-            <div hidden class="form-group">
+            <div class="form-group">
+                <label asp-for="MedicalProviders" class="control-label"></label>
+                <input asp-for="MedicalProviders" class="form-control" />
+                <span asp-validation-for="MedicalProviders" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Lat" class="control-label"></label>
                 <input asp-for="Lat" class="form-control" />
                 <span asp-validation-for="Lat" class="text-danger"></span>
             </div>
-            <div hidden class="form-group">
+            <div class="form-group">
                 <label asp-for="Long" class="control-label"></label>
                 <input asp-for="Long" class="form-control" />
                 <span asp-validation-for="Long" class="text-danger"></span>
@@ -65,6 +70,3 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
