--- a/Views/PersonalTrainers/Index.cshtml
+++ b/Views/PersonalTrainers/Index.cshtml
@@ -29,6 +29,9 @@
                 @Html.DisplayNameFor(model => model.ZipCode)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.MedicalProviders)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Lat)
             </th>
             <th>
@@ -58,6 +61,9 @@
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.ZipCode)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.MedicalProviders)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Lat)
