--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,7 +2,51 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<style>
+    body {
+        background-image: url("https://wallpaperplay.com/walls/full/2/a/3/32718.jpg");
+        background-size: cover;
+    }
+
+    .bodyText {
+        color: white;
+        font-family: Arial;
+    }
+
+    .TextTop {
+        font-size: 20px;
+        position: absolute;
+    }
+
+    .TextBottom {
+        font-size: 50px;
+        font-weight: 700;
+        position: relative;
+        top: 10px;
+        right: 5px;
+    }
+
+    .signUP {
+        border: 1.3px solid;
+        width: 121px;
+        border-color: red;
+        font-weight: 700;
+        color: red;
+        position: relative;
+        bottom: 10px;
+        left: 150px;
+    }
+</style>
+<script>function blinker() {
+        $('.blinking').fadeOut(500);
+        $('.blinking').fadeIn(500);
+    }
+    setInterval(blinker, 1000);</script>
+
+<body>
+</body>
+<div class="bodyText">
+    <p class="TextTop">JOIN US NOW</p>
+    <p class="TextBottom">Core Health &amp; Fitness</p>
+    <div class="blinking"><p class="signUP">&nbsp;SIGN-UP NOW&nbsp;</p></div>
 </div>
