--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -3,4 +3,33 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>
+    <br />
+    Protecting your private information is our priority.  This Statement of Privacy applies to
+    Core Health and Fitness and governs data collection and usage.  For purposes of this Privacy Policy,
+    unless otherwise noted, all references to Core Health and Fitness include CHAF.  The CHAF website is
+    an ecommerce site.  By using the CHAF website, you consent to the data practices described in this statement.
+</p>
+<br />
+<p>
+    <h3>Collection of your Personal Information</h3>
+    In order to better provide you with services offered on our Site, CHAF may collect personally
+    identifiable information, such as your (but not limited to):  First and Last Name, Address, Phone Number, and Email.
+    <br /><br />
+    We do not collect any personal information about you unless you voluntarily provide it to us.
+</p>
+<br />
+<p>
+    <h3>Use of your Personal Information</h3>
+    CHAF collects and uses your personal information to operate its website and deliver the services
+    you requested.
+</p>
+<br />
+<p>
+    <h3>Sharing Information with Third Parties</h3>
+    CHAF does not sell, rent, or lease its customer lists to third parties.
+</p>
+<br />
+<p>
+    Effective as of October 26, 2020.
+</p>
