Chnaged the name of PrivateAPIKeys in the BMI class for the API.

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -46,7 +46,7 @@
 <body>
 </body>
 <div class="bodyText">
-    <p class="TextTop">JOIN US NOW</p>
+    <p class="TextTop">JOIN US</p>
     <p class="TextBottom">Core Health &amp; Fitness</p>
     <div class="blinking"><p class="signUP">&nbsp;SIGN-UP NOW&nbsp;</p></div>
 </div>
