Made text boxes bigger for workout schedule and for medical history.

--- a/Views/Clients/CreateClientProfile.cshtml
+++ b/Views/Clients/CreateClientProfile.cshtml
@@ -35,7 +35,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="MedicalHistory" class="control-label"></label>
-                <input asp-for="MedicalHistory" class="form-control" />
+                <textarea class="form-control" name="mytext" rows="4" cols="20" placeholder="Medical History"></textarea>
                 <span asp-validation-for="MedicalHistory" class="text-danger"></span>
             </div>
             <div class="form-group">
