--- a/Views/PersonalTrainers/Create.cshtml
+++ b/Views/PersonalTrainers/Create.cshtml
@@ -43,12 +43,12 @@
                 <input asp-for="MedicalProviders" class="form-control" />
                 <span asp-validation-for="MedicalProviders" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div hidden class="form-group">
                 <label asp-for="Lat" class="control-label"></label>
                 <input asp-for="Lat" class="form-control" />
                 <span asp-validation-for="Lat" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div hidden class="form-group">
                 <label asp-for="Long" class="control-label"></label>
                 <input asp-for="Long" class="form-control" />
                 <span asp-validation-for="Long" class="text-danger"></span>
