--- a/Views/PersonalTrainers/CreateWorkoutSchedule.cshtml
+++ b/Views/PersonalTrainers/CreateWorkoutSchedule.cshtml
@@ -15,37 +15,37 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Monday" class="control-label"></label>
-                <input asp-for="Monday" class="form-control" />
+                <textarea class="form-control" name="mytext" rows="8" cols="40" placeholder="Monday"></textarea>
                 <span asp-validation-for="Monday" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Tuesday" class="control-label"></label>
-                <input asp-for="Tuesday" class="form-control" />
+                <textarea class="form-control" name="mytext" rows="8" cols="40" placeholder="Tuesday"></textarea>
                 <span asp-validation-for="Tuesday" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Wednsday" class="control-label"></label>
-                <input asp-for="Wednsday" class="form-control" />
+                <textarea class="form-control" name="mytext" rows="8" cols="40" placeholder="Wednsday"></textarea>
                 <span asp-validation-for="Wednsday" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Thursday" class="control-label"></label>
-                <input asp-for="Thursday" class="form-control" />
+                <textarea class="form-control" name="mytext" rows="8" cols="40" placeholder="Thursday"></textarea>
                 <span asp-validation-for="Thursday" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Friday" class="control-label"></label>
-                <input asp-for="Friday" class="form-control" />
+                <textarea class="form-control" name="mytext" rows="8" cols="40" placeholder="Friday"></textarea>
                 <span asp-validation-for="Friday" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Saturday" class="control-label"></label>
-                <input asp-for="Saturday" class="form-control" />
+                <textarea class="form-control" name="mytext" rows="8" cols="40" placeholder="Saturday"></textarea>
                 <span asp-validation-for="Saturday" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Sunday" class="control-label"></label>
-                <input asp-for="Sunday" class="form-control" />
+                <textarea class="form-control" name="mytext" rows="8" cols="40" placeholder="Sunday"></textarea>
                 <span asp-validation-for="Sunday" class="text-danger"></span>
             </div>
             <div hidden class="form-group">
