--- a/Views/Clients/Edit.cshtml
+++ b/Views/Clients/Edit.cshtml
@@ -44,10 +44,20 @@
                 <input asp-for="State" class="form-control" />
                 <span asp-validation-for="State" class="text-danger"></span>
             </div>
-            <div hidden class="form-group">
+            <div class="form-group">
                 <label asp-for="IdentityUserId" class="control-label"></label>
                 <select asp-for="IdentityUserId" class="form-control" asp-items="ViewBag.IdentityUserId"></select>
                 <span asp-validation-for="IdentityUserId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="PersonalTrainerId" class="control-label"></label>
+                <select asp-for="PersonalTrainerId" class="form-control" asp-items="ViewBag.PersonalTrainerId"></select>
+                <span asp-validation-for="PersonalTrainerId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ClientProfileId" class="control-label"></label>
+                <select asp-for="ClientProfileId" class="form-control" asp-items="ViewBag.ClientProfileId"></select>
+                <span asp-validation-for="ClientProfileId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
