--- a/Views/Clients/PersonalTrainersList.cshtml
+++ b/Views/Clients/PersonalTrainersList.cshtml
@@ -31,7 +31,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.MedicalProviders)
             </th>
-            @*<th>
+            <th>
                 @Html.DisplayNameFor(model => model.Lat)
             </th>
             <th>
@@ -39,7 +39,13 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.IdentityUser)
-            </th>*@
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.DietPlan)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.WorkoutSchedule)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -64,7 +70,7 @@
             <td>
                 @Html.DisplayFor(modelItem => item.MedicalProviders)
             </td>
-            @*<td>
+            <td>
                 @Html.DisplayFor(modelItem => item.Lat)
             </td>
             <td>
@@ -72,7 +78,13 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.IdentityUser.Id)
-            </td>*@
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.DietPlan.DietPlanID)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.WorkoutSchedule.ScheduleID)
+            </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.PersonalTrainerId">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.PersonalTrainerId">Details</a> |
