--- a/Views/PersonalTrainers/Create.cshtml
+++ b/Views/PersonalTrainers/Create.cshtml
@@ -43,19 +43,27 @@
                 <input asp-for="MedicalProviders" class="form-control" />
                 <span asp-validation-for="MedicalProviders" class="text-danger"></span>
             </div>
-            <div hidden class="form-group">
+            <div class="form-group">
                 <label asp-for="Lat" class="control-label"></label>
                 <input asp-for="Lat" class="form-control" />
                 <span asp-validation-for="Lat" class="text-danger"></span>
             </div>
-            <div hidden class="form-group">
+            <div class="form-group">
                 <label asp-for="Long" class="control-label"></label>
                 <input asp-for="Long" class="form-control" />
                 <span asp-validation-for="Long" class="text-danger"></span>
             </div>
-            <div hidden class="form-group">
+            <div class="form-group">
                 <label asp-for="IdentityUserId" class="control-label"></label>
                 <select asp-for="IdentityUserId" class ="form-control" asp-items="ViewBag.IdentityUserId"></select>
+            </div>
+            <div class="form-group">
+                <label asp-for="DietPlanID" class="control-label"></label>
+                <select asp-for="DietPlanID" class ="form-control" asp-items="ViewBag.DietPlanID"></select>
+            </div>
+            <div class="form-group">
+                <label asp-for="ScheduleID" class="control-label"></label>
+                <select asp-for="ScheduleID" class ="form-control" asp-items="ViewBag.ScheduleID"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
