--- a/Views/PersonalTrainers/Delete.cshtml
+++ b/Views/PersonalTrainers/Delete.cshtml
@@ -66,6 +66,18 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.IdentityUser.Id)
         </dd class>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.DietPlan)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.DietPlan.DietPlanID)
+        </dd class>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.WorkoutSchedule)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.WorkoutSchedule.ScheduleID)
+        </dd class>
     </dl>
     
     <form asp-action="Delete">
