--- a/Views/PersonalTrainers/Edit.cshtml
+++ b/Views/PersonalTrainers/Edit.cshtml
@@ -54,10 +54,20 @@
                 <input asp-for="Long" class="form-control" />
                 <span asp-validation-for="Long" class="text-danger"></span>
             </div>
-            <div hidden class="form-group">
+            <div class="form-group">
                 <label asp-for="IdentityUserId" class="control-label"></label>
                 <select asp-for="IdentityUserId" class="form-control" asp-items="ViewBag.IdentityUserId"></select>
                 <span asp-validation-for="IdentityUserId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="DietPlanID" class="control-label"></label>
+                <select asp-for="DietPlanID" class="form-control" asp-items="ViewBag.DietPlanID"></select>
+                <span asp-validation-for="DietPlanID" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ScheduleID" class="control-label"></label>
+                <select asp-for="ScheduleID" class="form-control" asp-items="ViewBag.ScheduleID"></select>
+                <span asp-validation-for="ScheduleID" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
