--- a/Views/PersonalTrainers/Edit.cshtml
+++ b/Views/PersonalTrainers/Edit.cshtml
@@ -55,19 +55,64 @@
                 <span asp-validation-for="Long" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="CaloricIntake" class="control-label"></label>
+                <input asp-for="CaloricIntake" class="form-control" />
+                <span asp-validation-for="CaloricIntake" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Protein" class="control-label"></label>
+                <input asp-for="Protein" class="form-control" />
+                <span asp-validation-for="Protein" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Carbohydrates" class="control-label"></label>
+                <input asp-for="Carbohydrates" class="form-control" />
+                <span asp-validation-for="Carbohydrates" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Fat" class="control-label"></label>
+                <input asp-for="Fat" class="form-control" />
+                <span asp-validation-for="Fat" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Monday" class="control-label"></label>
+                <input asp-for="Monday" class="form-control" />
+                <span asp-validation-for="Monday" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Tuesday" class="control-label"></label>
+                <input asp-for="Tuesday" class="form-control" />
+                <span asp-validation-for="Tuesday" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Wednsday" class="control-label"></label>
+                <input asp-for="Wednsday" class="form-control" />
+                <span asp-validation-for="Wednsday" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Thursday" class="control-label"></label>
+                <input asp-for="Thursday" class="form-control" />
+                <span asp-validation-for="Thursday" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Friday" class="control-label"></label>
+                <input asp-for="Friday" class="form-control" />
+                <span asp-validation-for="Friday" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Saturday" class="control-label"></label>
+                <input asp-for="Saturday" class="form-control" />
+                <span asp-validation-for="Saturday" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Sunday" class="control-label"></label>
+                <input asp-for="Sunday" class="form-control" />
+                <span asp-validation-for="Sunday" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="IdentityUserId" class="control-label"></label>
                 <select asp-for="IdentityUserId" class="form-control" asp-items="ViewBag.IdentityUserId"></select>
                 <span asp-validation-for="IdentityUserId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="DietPlanID" class="control-label"></label>
-                <select asp-for="DietPlanID" class="form-control" asp-items="ViewBag.DietPlanID"></select>
-                <span asp-validation-for="DietPlanID" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ScheduleID" class="control-label"></label>
-                <select asp-for="ScheduleID" class="form-control" asp-items="ViewBag.ScheduleID"></select>
-                <span asp-validation-for="ScheduleID" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
