--- a/Views/PersonalTrainers/Delete.cshtml
+++ b/Views/PersonalTrainers/Delete.cshtml
@@ -67,22 +67,22 @@
             @Html.DisplayFor(model => model.CaloricIntake)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Protein)
+            @Html.DisplayNameFor(model => model.ProteinInGrams)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Protein)
+            @Html.DisplayFor(model => model.ProteinInGrams)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Carbohydrates)
+            @Html.DisplayNameFor(model => model.CarbohydratesInGrams)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Carbohydrates)
+            @Html.DisplayFor(model => model.CarbohydratesInGrams)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Fat)
+            @Html.DisplayNameFor(model => model.FatInGram)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Fat)
+            @Html.DisplayFor(model => model.FatInGram)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Monday)
