--- a/Views/Clients/Create.cshtml
+++ b/Views/Clients/Create.cshtml
@@ -88,14 +88,14 @@
                 <input asp-for="PastInjuries" class="form-control" />
                 <span asp-validation-for="PastInjuries" class="text-danger"></span>
             </div>
-            @*<div class="form-group">
+            <div class="form-group">
                 <label asp-for="IdentityUserId" class="control-label"></label>
                 <select asp-for="IdentityUserId" class ="form-control" asp-items="ViewBag.IdentityUserId"></select>
-            </div>*@
-        <div class="form-group">
-            <label asp-for="PersonalTrainerId" class="control-label"></label>
-            <select asp-for="PersonalTrainerId" class="form-control" asp-items='Model.PersonalTrainers'></select> @*'new SelectList(Model.PersonalTrainer, "Id", "Name")'*@
-        </div>
+            </div>
+            <div class="form-group">
+                <label asp-for="PersonalTrainerId" class="control-label"></label>
+                <select asp-for="PersonalTrainerId" class ="form-control" asp-items="ViewBag.PersonalTrainerId"></select>
+            </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
