--- a/Views/Clients/Details.cshtml
+++ b/Views/Clients/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model Core_Health_and_Fitness.Models.Client
+﻿@model Core_Health_and_Fitness.Models.PersonalTrainer
 
 @{
     ViewData["Title"] = "Details";
@@ -8,7 +8,7 @@
 <h1>Details</h1>
 
 <div>
-    <h4>Client</h4>
+    <h4>PersonalTrainer</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -24,22 +24,10 @@
             @Html.DisplayFor(model => model.LastName)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.StreetAddress)
+            @Html.DisplayNameFor(model => model.AddressLine)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.StreetAddress)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ZipCode)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ZipCode)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.City)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.City)
+            @Html.DisplayFor(model => model.AddressLine)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.State)
@@ -48,58 +36,94 @@
             @Html.DisplayFor(model => model.State)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Age)
+            @Html.DisplayNameFor(model => model.ZipCode)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Age)
+            @Html.DisplayFor(model => model.ZipCode)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Height)
+            @Html.DisplayNameFor(model => model.MedicalProviders)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Height)
+            @Html.DisplayFor(model => model.MedicalProviders)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Weight)
+            @Html.DisplayNameFor(model => model.Lat)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Weight)
+            @Html.DisplayFor(model => model.Lat)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FitnessGoal)
+            @Html.DisplayNameFor(model => model.Long)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.FitnessGoal)
+            @Html.DisplayFor(model => model.Long)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.StartDate)
+            @Html.DisplayNameFor(model => model.CaloricIntake)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.StartDate)
+            @Html.DisplayFor(model => model.CaloricIntake)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.EndDate)
+            @Html.DisplayNameFor(model => model.ProteinInGrams)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.EndDate)
+            @Html.DisplayFor(model => model.ProteinInGrams)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.WeightGoal)
+            @Html.DisplayNameFor(model => model.CarbohydratesInGrams)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.WeightGoal)
+            @Html.DisplayFor(model => model.CarbohydratesInGrams)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.MedicalProvider)
+            @Html.DisplayNameFor(model => model.FatInGram)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.MedicalProvider)
+            @Html.DisplayFor(model => model.FatInGram)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PastInjuries)
+            @Html.DisplayNameFor(model => model.Monday)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PastInjuries)
+            @Html.DisplayFor(model => model.Monday)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Tuesday)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Tuesday)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Wednsday)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Wednsday)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Thursday)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Thursday)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Friday)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Friday)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Saturday)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Saturday)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Sunday)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Sunday)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.IdentityUser)
@@ -107,15 +131,9 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.IdentityUser.Id)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PersonalTrainer)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PersonalTrainer.PersonalTrainerId)
-        </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.ClientId">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model.PersonalTrainerId">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
