--- a/Views/PersonalTrainers/Create.cshtml
+++ b/Views/PersonalTrainers/Create.cshtml
@@ -59,19 +59,19 @@
                 <span asp-validation-for="CaloricIntake" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Protein" class="control-label"></label>
-                <input asp-for="Protein" class="form-control" />
-                <span asp-validation-for="Protein" class="text-danger"></span>
+                <label asp-for="ProteinInGrams" class="control-label"></label>
+                <input asp-for="ProteinInGrams" class="form-control" />
+                <span asp-validation-for="ProteinInGrams" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Carbohydrates" class="control-label"></label>
-                <input asp-for="Carbohydrates" class="form-control" />
-                <span asp-validation-for="Carbohydrates" class="text-danger"></span>
+                <label asp-for="CarbohydratesInGrams" class="control-label"></label>
+                <input asp-for="CarbohydratesInGrams" class="form-control" />
+                <span asp-validation-for="CarbohydratesInGrams" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Fat" class="control-label"></label>
-                <input asp-for="Fat" class="form-control" />
-                <span asp-validation-for="Fat" class="text-danger"></span>
+                <label asp-for="FatInGram" class="control-label"></label>
+                <input asp-for="FatInGram" class="form-control" />
+                <span asp-validation-for="FatInGram" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Monday" class="control-label"></label>
