--- a/Views/PersonalTrainers/Details.cshtml
+++ b/Views/PersonalTrainers/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model Core_Health_and_Fitness.Models.PersonalTrainer
+﻿@model Core_Health_and_Fitness.Models.Client
 
 @{
     ViewData["Title"] = "Details";
@@ -8,7 +8,7 @@
 <h1>Details</h1>
 
 <div>
-    <h4>PersonalTrainer</h4>
+    <h4>Client</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -24,16 +24,10 @@
             @Html.DisplayFor(model => model.LastName)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.AddressLine)
+            @Html.DisplayNameFor(model => model.StreetAddress)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.AddressLine)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.State)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.State)
+            @Html.DisplayFor(model => model.StreetAddress)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.ZipCode)
@@ -42,88 +36,70 @@
             @Html.DisplayFor(model => model.ZipCode)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.MedicalProviders)
+            @Html.DisplayNameFor(model => model.City)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.MedicalProviders)
+            @Html.DisplayFor(model => model.City)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Lat)
+            @Html.DisplayNameFor(model => model.State)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Lat)
+            @Html.DisplayFor(model => model.State)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Long)
+            @Html.DisplayNameFor(model => model.Age)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Long)
+            @Html.DisplayFor(model => model.Age)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CaloricIntake)
+            @Html.DisplayNameFor(model => model.Height)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CaloricIntake)
+            @Html.DisplayFor(model => model.Height)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Protein)
+            @Html.DisplayNameFor(model => model.Weight)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Protein)
+            @Html.DisplayFor(model => model.Weight)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Carbohydrates)
+            @Html.DisplayNameFor(model => model.FitnessGoal)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Carbohydrates)
+            @Html.DisplayFor(model => model.FitnessGoal)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Fat)
+            @Html.DisplayNameFor(model => model.StartDate)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Fat)
+            @Html.DisplayFor(model => model.StartDate)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Monday)
+            @Html.DisplayNameFor(model => model.EndDate)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Monday)
+            @Html.DisplayFor(model => model.EndDate)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Tuesday)
+            @Html.DisplayNameFor(model => model.WeightGoal)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Tuesday)
+            @Html.DisplayFor(model => model.WeightGoal)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Wednsday)
+            @Html.DisplayNameFor(model => model.MedicalProvider)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Wednsday)
+            @Html.DisplayFor(model => model.MedicalProvider)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Thursday)
+            @Html.DisplayNameFor(model => model.PastInjuries)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Thursday)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Friday)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Friday)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Saturday)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Saturday)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Sunday)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Sunday)
+            @Html.DisplayFor(model => model.PastInjuries)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.IdentityUser)
@@ -131,9 +107,15 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.IdentityUser.Id)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.PersonalTrainer)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.PersonalTrainer.PersonalTrainerId)
+        </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.PersonalTrainerId">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model.ClientId">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
